// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageBar /> with a type matches its snapshot 1`] = `
<Block
  className="y-message-bar y-message-bar__type-warning"
  textSize="small"
>
  <FixedGridRow
    gutterSize="xxLarge"
  >
    <FixedGridColumn>
      content
    </FixedGridColumn>
  </FixedGridRow>
</Block>
`;

exports[`<MessageBar /> with actions matches its snapshot 1`] = `
<Block
  className="y-message-bar y-message-bar__type-info"
  textSize="small"
>
  <FixedGridRow
    gutterSize="xxLarge"
  >
    <FixedGridColumn>
      content
    </FixedGridColumn>
    <FixedGridColumn
      fixed={true}
    >
      <FakeLink>
        Link
      </FakeLink>
    </FixedGridColumn>
  </FixedGridRow>
</Block>
`;

exports[`<MessageBar /> with additional className matches its snapshot 1`] = `
<Block
  className="y-message-bar y-message-bar__type-info TEST_CLASSNAME"
  textSize="small"
>
  <FixedGridRow
    gutterSize="xxLarge"
  >
    <FixedGridColumn>
      content
    </FixedGridColumn>
  </FixedGridRow>
</Block>
`;

exports[`<MessageBar /> with default options matches its snapshot 1`] = `
<Block
  className="y-message-bar y-message-bar__type-info"
  textSize="small"
>
  <FixedGridRow
    gutterSize="xxLarge"
  >
    <FixedGridColumn>
      content
    </FixedGridColumn>
  </FixedGridRow>
</Block>
`;
